// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-hBdhWE cCYRqQ"
  color="bulma.100"
  size={16}
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBdhWE cCYRqQ"
    color="bulma.100"
    size={16}
  >
    Defaul color is Bulma
  </p>
  <p
    className="sc-hBdhWE gobNtt"
    color="piccolo.100"
    size={16}
  >
    Piccolo
  </p>
  <p
    className="sc-hBdhWE dOEtYz"
    color="trunks.100"
    size={16}
  >
    Trunks
  </p>
  <p
    className="sc-hBdhWE cuOrDV"
    color="krillin.100"
    size={16}
  >
    Krillin
  </p>
</div>
`;

exports[`Caption renders font-weight 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBdhWE cCYRqQ"
    color="bulma.100"
    size={16}
  >
    Defaul font-weight is regular
  </p>
  <p
    className="sc-hBdhWE kZLUDS"
    color="bulma.100"
    size={16}
  >
    Font-weight is bold
  </p>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBdhWE cCYRqQ"
    color="bulma.100"
    size={16}
  >
    Paragraph is a default tag
  </p>
  <span
    className="sc-hBdhWE cCYRqQ"
    color="bulma.100"
    size={16}
  >
    Span tag
  </span>
  <label
    className="sc-hBdhWE cCYRqQ"
    color="bulma.100"
    size={16}
  >
    Label tag
  </label>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBdhWE cCYRqQ"
    color="bulma.100"
    size={16}
  >
    Defaul font-size is 16px
  </p>
  <p
    className="sc-hBdhWE cBhmEH"
    color="bulma.100"
    size={24}
  >
    Size is 24px
  </p>
  <p
    className="sc-hBdhWE cgdnBo"
    color="bulma.100"
    size={48}
  >
    Size is 48px
  </p>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBdhWE cCYRqQ"
    color="bulma.100"
    size={16}
  >
    Text-align is not specified
  </p>
  <p
    className="sc-hBdhWE kSAtiD"
    color="bulma.100"
    size={16}
  >
    Centered text
  </p>
  <p
    className="sc-hBdhWE jESvDY"
    color="bulma.100"
    size={16}
  >
    Right alignment
  </p>
</div>
`;
